5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1595_2894.log
== TEST (2019-03-30 18:00:38) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = ?????

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 8
    total = ?????
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:11:33) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
Jogo1 = float(input("Qual o valor unitario do jogo? "))
Jogo2 = float(input("Qual o valor unitario do jogo? "))
Jogo3= float(input("Qual o valor unitario do jogo? "))
Jogo4 = float(input("Qual o valor unitario do jogo? "))
Jogo5 = float(input("Qual o valor unitario do jogo? "))
Jogo6 = float(input("Qual o valor unitario do jogo? "))
Jogo7 = float(input("Qual o valor unitario do jogo? "))
Jogo8 = float(input("Qual o valor unitario do jogo? "))


# Calculo do valor a ser pago, incluindo o frete:
total = input(Jogo1 + Jogo2 + Jogo3 + Jogo4 + Jog5 + Jogo6 + Jogo7 + Jogo8 + 45)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Jogo2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:12:26) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
Jogo1 = float(input("Qual o valor unitario do jogo? "))
Jogo2 = float(input("Qual o valor unitario do jogo? "))
Jogo3= float(input("Qual o valor unitario do jogo? "))
Jogo4 = float(input("Qual o valor unitario do jogo? "))
Jogo5 = float(input("Qual o valor unitario do jogo? "))
Jogo6 = float(input("Qual o valor unitario do jogo? "))
Jogo7 = float(input("Qual o valor unitario do jogo? "))
Jogo8 = float(input("Qual o valor unitario do jogo? "))


# Calculo do valor a ser pago, incluindo o frete:
total = input(Jogo1 + Jogo2 + Jogo3 + Jogo4 + Jogo5 + Jogo6 + Jogo7 + Jogo8 + 45)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Jogo2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:12:52) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
Jogo1 = float(input("Qual o valor unitario do jogo? "))
Jogo2 = float(input("Qual o valor unitario do jogo? "))
Jogo3= float(input("Qual o valor unitario do jogo? "))
Jogo4 = float(input("Qual o valor unitario do jogo? "))
Jogo5 = float(input("Qual o valor unitario do jogo? "))
Jogo6 = float(input("Qual o valor unitario do jogo? "))
Jogo7 = float(input("Qual o valor unitario do jogo? "))
Jogo8 = float(input("Qual o valor unitario do jogo? "))


# Calculo do valor a ser pago, incluindo o frete:
total = input(Jogo1 + Jogo2 + Jogo3 + Jogo4 + Jogo5 + Jogo6 + Jogo7 + Jogo8 + 45)

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.153577
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2894/main.py", line 6, in <module>
    Jogo2 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:14:15) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
frete = 45
Jogo1 = float(input("Qual o valor unitario do jogo? "))
Jogo2 = float(input("Qual o valor unitario do jogo? "))
Jogo3= float(input("Qual o valor unitario do jogo? "))
Jogo4 = float(input("Qual o valor unitario do jogo? "))
Jogo5 = float(input("Qual o valor unitario do jogo? "))
Jogo6 = float(input("Qual o valor unitario do jogo? "))
Jogo7 = float(input("Qual o valor unitario do jogo? "))
Jogo8 = float(input("Qual o valor unitario do jogo? "))


# Calculo do valor a ser pago, incluindo o frete:
total = input(Jogo1 + Jogo2 + Jogo3 + Jogo4 + Jogo5 + Jogo6 + Jogo7 + Jogo8 + frete)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    Jogo2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:14:34) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
frete = 45
Jogo1 = float(input("Qual o valor unitario do jogo? "))
Jogo2 = float(input("Qual o valor unitario do jogo? "))
Jogo3= float(input("Qual o valor unitario do jogo? "))
Jogo4 = float(input("Qual o valor unitario do jogo? "))
Jogo5 = float(input("Qual o valor unitario do jogo? "))
Jogo6 = float(input("Qual o valor unitario do jogo? "))
Jogo7 = float(input("Qual o valor unitario do jogo? "))
Jogo8 = float(input("Qual o valor unitario do jogo? "))


# Calculo do valor a ser pago, incluindo o frete:
total = input(Jogo1 + Jogo2 + Jogo3 + Jogo4 + Jogo5 + Jogo6 + Jogo7 + Jogo8 + frete)

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.14755
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2894/main.py", line 7, in <module>
    Jogo2 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:16:39) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
frete = 45
Jogo1 = float(input("Qual o valor unitario do jogo1? "))
Jogo2 = float(input("Qual o valor unitario do jogo2? "))
Jogo3= float(input("Qual o valor unitario do jogo3? "))
Jogo4 = float(input("Qual o valor unitario do jogo4? "))
Jogo5 = float(input("Qual o valor unitario do jogo5? "))
Jogo6 = float(input("Qual o valor unitario do jogo6? "))
Jogo7 = float(input("Qual o valor unitario do jogo7? "))
Jogo8 = float(input("Qual o valor unitario do jogo8? "))


# Calculo do valor a ser pago, incluindo o frete:
total = input(Jogo1 + Jogo2 + Jogo3 + Jogo4 + Jogo5 + Jogo6 + Jogo7 + Jogo8 + frete)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    Jogo2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:16:43) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
frete = 45
Jogo1 = float(input("Qual o valor unitario do jogo1? "))
Jogo2 = float(input("Qual o valor unitario do jogo2? "))
Jogo3= float(input("Qual o valor unitario do jogo3? "))
Jogo4 = float(input("Qual o valor unitario do jogo4? "))
Jogo5 = float(input("Qual o valor unitario do jogo5? "))
Jogo6 = float(input("Qual o valor unitario do jogo6? "))
Jogo7 = float(input("Qual o valor unitario do jogo7? "))
Jogo8 = float(input("Qual o valor unitario do jogo8? "))


# Calculo do valor a ser pago, incluindo o frete:
total = input(Jogo1 + Jogo2 + Jogo3 + Jogo4 + Jogo5 + Jogo6 + Jogo7 + Jogo8 + frete)

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.142877
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2894/main.py", line 7, in <module>
    Jogo2 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:17:49) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
frete = 45
Jogo1 = float(input("Qual o valor unitario do jogo1? "))
Jogo2 = float(input("Qual o valor unitario do jogo2? "))
Jogo3= float(input("Qual o valor unitario do jogo3? "))
Jogo4 = float(input("Qual o valor unitario do jogo4? "))
Jogo5 = float(input("Qual o valor unitario do jogo5? "))
Jogo6 = float(input("Qual o valor unitario do jogo6? "))
Jogo7 = float(input("Qual o valor unitario do jogo7? "))
Jogo8 = float(input("Qual o valor unitario do jogo8? "))


# Calculo do valor a ser pago, incluindo o frete:
total = input(Jogo1 + Jogo2 + Jogo3 + Jogo4 + Jogo5 + Jogo6 + Jogo7 + Jogo8 + frete)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    Jogo2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:18:12) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
frete = 45
Jogo1 = float(input("Qual o valor unitario do jogo1? "))
Jogo2 = float(input("Qual o valor unitario do jogo2? "))
Jogo3= float(input("Qual o valor unitario do jogo3? "))
Jogo4 = float(input("Qual o valor unitario do jogo4? "))
Jogo5 = float(input("Qual o valor unitario do jogo5? "))
Jogo6 = float(input("Qual o valor unitario do jogo6? "))
Jogo7 = float(input("Qual o valor unitario do jogo7? "))
Jogo8 = float(input("Qual o valor unitario do jogo8? "))


# Calculo do valor a ser pago, incluindo o frete:
total = input(Jogo1 + Jogo2 + Jogo3 + Jogo4 + Jogo5 + Jogo6 + Jogo7 + Jogo8 + frete)

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.124828
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2894/Lab1_Ex1.py", line 7, in <module>
    Jogo2 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:23:01) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
frete = 45
Jogo = float(input("Qual o valor unitario do jogo1? "))


# Calculo do valor a ser pago, incluindo o frete:
total = input(Jogo1 + Jogo2 + Jogo3 + Jogo4 + Jogo5 + Jogo6 + Jogo7 + Jogo8 + frete)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = input(Jogo1 + Jogo2 + Jogo3 + Jogo4 + Jogo5 + Jogo6 + Jogo7 + Jogo8 + frete)
NameError: name 'Jogo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:23:22) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
frete = 45
Jogo = float(input("Qual o valor unitario do jogo1? "))


# Calculo do valor a ser pago, incluindo o frete:
total = input(Jogo + frete)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = input(Jogo + frete)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:23:32) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
frete = 45
Jogo = float(input("Qual o valor unitario do jogo1? "))


# Calculo do valor a ser pago, incluindo o frete:
total = input(Jogo + frete)

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.135802
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2894/Lab1_Ex1.py", line 10, in <module>
    total = input(Jogo + frete)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:24:43) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
frete = 45
Jogo = 100
Jogo = float(input("Qual o valor unitario do jogo1? "))


# Calculo do valor a ser pago, incluindo o frete:
total = input(Jogo + frete)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total = input(Jogo + frete)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:28:04) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
frete = 45
Jogo = 100
var = float(input("Qual o valor unitario do jogo1? "))
print ("O valor do jogo é: ")


# Calculo do valor a ser pago, incluindo o frete:
total = input(Jogo + frete)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    total = input(Jogo + frete)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:28:14) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
frete = 45
Jogo = 100
var = float(input("Qual o valor unitario do jogo1? "))
print ("O valor do jogo é: ")


# Calculo do valor a ser pago, incluindo o frete:
total = input(Jogo + frete)

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.128878
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2894/Lab1_Ex1.py", line 8, in <module>
    print ("O valor do jogo \xe9: ")
UnicodeEncodeError: 'ascii' codec can't encode character '\xe9' in position 16: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:28:21) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
frete = 45
Jogo = 100
var = float(input("Qual o valor unitario do jogo1? "))
print ("O valor do jogo é: ", var)


# Calculo do valor a ser pago, incluindo o frete:
total = input(Jogo + frete)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    total = input(Jogo + frete)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:28:57) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
frete = 45
var = float(input("Qual o valor unitario do jogo? "))
print ("O valor do jogo é: ", var)


# Calculo do valor a ser pago, incluindo o frete:
total = input(Jogo + frete)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total = input(Jogo + frete)
NameError: name 'Jogo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:29:17) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
frete = 45
var = float(input("Qual o valor unitario do jogo? "))
print ("Valor do jogo: ", var)


# Calculo do valor a ser pago, incluindo o frete:
total = input(Jogo + frete)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    total = input(Jogo + frete)
NameError: name 'Jogo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:08:49) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
frete = 45
var = float(input("Qual o valor unitario do jogo? "))
print ("Valor do jogo: ", var)

# Calculo do valor a ser pago, incluindo o frete:
total = input(var*8 + frete)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = input(var*8 + frete)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:09:02) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
frete = 45
var = float(input("Qual o valor unitario do jogo? "))
print ("Valor do jogo: ", var)

# Calculo do valor a ser pago, incluindo o frete:
total = input(var*8 + frete)

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.158299
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2894/Lab1_Ex1.py", line 10, in <module>
    total = input(var*8 + frete)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:09:58) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
frete = 45
var = float(input("Qual o valor unitario do jogo? "))
print ("Valor do jogo: ", var)

# Calculo do valor a ser pago, incluindo o frete:
total = input(var*8 + frete)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = input(var*8 + frete)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:14:49) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
frete = 45
var = float(input("Qual o valor unitario do jogo? "))


# Calculo do valor a ser pago, incluindo o frete:
total = input(var*8 + frete)

# Impressao do valor total:
print ("Valor do jogo: ", var)
print("Valor dos Jogos e Frete", total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = input(var*8 + frete)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:15:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
frete = 45
var = float(input("Qual o valor unitario do jogo? "))


# Calculo do valor a ser pago, incluindo o frete:
total = input(var*8 + frete)

# Impressao do valor total:
print ("Valor do jogo: ", var)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = input(var*8 + frete)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:16:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
frete = 45
var = float(input("Qual o valor unitario do jogo? "))


# Calculo do valor a ser pago, incluindo o frete:
total = input(var*8 + frete)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    total = input(var*8 + frete)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:16:47) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
frete = 45
var = float(input("Qual o valor unitario do jogo? "))


# Calculo do valor a ser pago, incluindo o frete:
total = input(var*8 + frete)

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.218236
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2894/Lab1_Ex1.py", line 10, in <module>
    total = input(var*8 + frete)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:17:42) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))


# Calculo do valor a ser pago, incluindo o frete:
total = input(var*8 + 45)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = input(var*8 + 45)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:17:52) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))


# Calculo do valor a ser pago, incluindo o frete:
total = input(var*8 + 45)

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.185029
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2894/Lab1_Ex1.py", line 9, in <module>
    total = input(var*8 + 45)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:19:31) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = input("O valor do Jogo no site A :")
jogo = float(input("Qual o valor unitario do jogo? ", var))


# Calculo do valor a ser pago, incluindo o frete:
total = input(jogo*8 + 45)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    jogo = float(input("Qual o valor unitario do jogo? ", var))
TypeError: input expected at most 1 arguments, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:20:13) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = input("O valor do Jogo no site A: ")
jogo = float("Qual o valor unitario do jogo? ", var)


# Calculo do valor a ser pago, incluindo o frete:
total = input(jogo*8 + 45)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    jogo = float("Qual o valor unitario do jogo? ", var)
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:21:16) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = input("O valor do Jogo no site A: ")
jogo = float("Qual o valor unitario do jogo? ", var)
print(jogo)


# Calculo do valor a ser pago, incluindo o frete:
total = input(jogo*8 + 45)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    jogo = float("Qual o valor unitario do jogo? ", var)
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:22:04) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = input("O valor do Jogo no site A: ")
jogo = float(input("Qual o valor unitario do jogo? ")
print(jogo)


# Calculo do valor a ser pago, incluindo o frete:
total = input(jogo*8 + 45)

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 7
    print(jogo)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:22:31) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = input("O valor do Jogo no site A: ")
jogo = float(input("Qual o valor unitario do jogo? ")


# Calculo do valor a ser pago, incluindo o frete:
total = (jogo*8 + 45)

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 10
    total = (jogo*8 + 45)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:23:42) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = input("O valor do Jogo no site A: ")
jogo = float(input("Qual o valor unitario do jogo? ")


# Calculo do valor a ser pago, incluindo o frete:
total = (jogo)*8 + 45

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 10
    total = (jogo)*8 + 45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:25:00) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = input("O valor do Jogo no site A: ")
jogo = float("Qual o valor unitario do jogo? ")


# Calculo do valor a ser pago, incluindo o frete:
total = (jogo)*8 + 45

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    jogo = float("Qual o valor unitario do jogo? ")
ValueError: could not convert string to float: 'Qual o valor unitario do jogo? '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:25:24) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = input("O valor do Jogo no site A: ")
jogo = float("Qual o valor unitario do jogo? ",var)


# Calculo do valor a ser pago, incluindo o frete:
total = (jogo)*8 + 45

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    jogo = float("Qual o valor unitario do jogo? ",var)
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:25:54) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = input("O valor do Jogo no site A: ")
jogo = float(var)


# Calculo do valor a ser pago, incluindo o frete:
total = (jogo)*8 + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:26:05) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = input("O valor do Jogo no site A: ")
jogo = float(var)


# Calculo do valor a ser pago, incluindo o frete:
total = (jogo)*8 + 45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.271604
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
